[package]
name = "file-per-thread-logger"
version = "0.1.4"
authors = ["Benjamin Bouvier <public@benj.me>"]
description = "A logging implementation that writes logs in one file per thread"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bnjbvr/file-per-thread-logger"
keywords = ["log", "logger", "logging", "thread"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.8.4"

[dev-dependencies]
tempfile = "3.2.0"
