[package]
name = "file-per-thread-logger"
version = "0.2.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
description = "A logging implementation that writes logs in one file per thread"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bnjbvr/file-per-thread-logger"
keywords = ["log", "logger", "logging", "thread"]
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/file-per-thread-logger"

[dependencies]
log = "0.4.28"
env_filter = "0.1.3"

[dev-dependencies]
tempfile = "3.21.0"
